# cpp_dumb

./: .gitignore  CMakeLists.txt  test_project
src/: main.cpp  poly.cpp  poly.h  rectangle.cpp  rectangle.h
